# testscribe

./: .coveragerc  .flake8  .gitignore  README.md  check_all.sh  flake8_check.sh  pyproject.toml  run_python.sh  run_tests.sh  test-scribe-config.yml  test_scribe_logging.conf  testscribe.py  tox.ini
.github/workflows/: python-app.yml
docs/: CNAME  Gemfile  _config.yml  demo.markdown  faq.markdown  index.markdown
docs/_includes/: youtube.html
docs/_layouts/: my-home.html
src/test_scribe/: base_reflection_util.py  cli.py  code_gen_util.py  complex_value_util.py  config.py  create_test_cmd.py  custom_type.py  delete_test_cmd.py  description.py  eval_expression.py  exception_decorator.py  execution.py  execution_util.py  file_info.py  gather_referenced_modules.py  gen_mock_code.py  gen_mock_verification_code.py  gen_patch_code.py  generate_imports.py  generate_tests.py  global_var.py  ignore.py  input_params.py  load_scribe_file.py  log.py  main.py  mock_call.py  mock_proxy.py  mock_proxy_support.py  mocking_support.py  model.py  model_encoder.py  model_type.py  move_cmd.py  namedvalues.py  parameter_value_input.py  parameter_value_input_cli.py  patcher.py  reflection_util.py  result_assertion.py  (+14 more)
src/testscribe/: __init__.py  __main__.py  base_reflection_util.py  cli.py  code_gen_util.py  complex_value_util.py  config.py  constant.py  context.py  create_test_cmd.py  custom_type.py  delete_test_cmd.py  description.py  error.py  eval_expression.py  exception_decorator.py  execution.py  execution_util.py  file_info.py  gather_referenced_modules.py  gen_mock_code.py  gen_mock_verification_code.py  gen_patch_code.py  generate_imports.py  generate_tests.py  global_var.py  ignore.py  input_params.py  load_scribe_file.py  log.py  mock_call.py  mock_proxy.py  mock_proxy_support.py  mocking_support.py  model.py  model_encoder.py  model_type.py  module.py  move_cmd.py  namedvalues.py  (+21 more)
src/tools/: migrate_test_names.py
tests/: conftest.py  integration_test_setup.py  setup.py  test-patch-config.yml
tests/fixture/: __init__.py  helper.py
tests/manual/: test_create_output_dir.py  test_end_to_end.py  test_generate_tests.py  test_mock_api.py  test_mock_call.py  test_mock_proxy.py  test_mock_proxy_support.py  test_mocking_support.py  test_process_mock_marker_wrapper.py  test_transformer.py  test_type.py  test_utils.py  test_value_input.py  test_write_to_file_example.py
tests/test_data/: calculator.py  car.py  class_method.py  complex_mock_call.py  context_mgr.py  dict_input.py  dummy_app.py  duplicate_patch.py  echo.py  exception_in_func.py  exception_in_init.py  file_op.py  function_as_param.py  function_as_param_wrapper.py  greet.py  greet_wrapper.py  ignore_return.py  ignore_some_returns.py  list_input.py  mixed_type.py  mock_hash_method.py  mock_str_method.py  modify_parameter.py  object_as_dict_key.py  patch_dict.py  person.py  (+26 more)
(+117 files in other folders)
