[tool.poetry]
name = "testscribe"
version = "0.0.1-alpha-1"
description = "Unit test automation tool"
authors = ["Ray Yang <ruiguo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# typing.get_args is introduced in python 3.8
python = "^3.8"
typer = "*"
# Before pyyaml 5.1 the directory keys are sorted, it is desirable to
# control the order so that it is easier to read.
# 5.1 somehow causes problems recognizing the custom tags.
PyYAML = ">=5.2"

[tool.poetry.dev-dependencies]
pytest = "*"
# There is a problem with dependency resolution with Six when pytest-clarity
# is at lower version.
pytest-clarity = ">=1"
assertpy = "*"
flake8 = "*"
black = "*"
pytest-cov = "*"
twine = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
